<resources>
    <string name="app_name">RentEasyJM</string>
    <string name="findRentRelax">Find.Rent.Relax</string>
    <string name="Description">Discover your perfect Getaway \n Only one click away.\n</string>
    <string name="renteasy">RentEasy</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Let_s_login">Let\'s Login</string>
    <string name="Register_now">Don\'t have an account? Register</string>
</resources>